zoc/src/syntax_tree/parser/tests/snapshots/zoc__syntax_tree__parser__tests__app__app_2_args.snap
---
source: zoc/src/syntax_tree/parser/tests/app.rs
expression: "&cst"
---
App(
    App {
        lparen: ByteIndex(
            0,
        ),
        callee: Deb(
            NumberLiteral {
                value: 0,
                span: (
                    ByteIndex(
                        1,
                    ),
                    ByteIndex(
                        2,
                    ),
                ),
            },
        ),
        args: Snoc(
            Snoc(
                Nil,
                Deb(
                    NumberLiteral {
                        value: 1,
                        span: (
                            ByteIndex(
                                3,
                            ),
                            ByteIndex(
                                4,
                            ),
                        ),
                    },
                ),
            ),
            Deb(
                NumberLiteral {
                    value: 1,
                    span: (
                        ByteIndex(
                            5,
                        ),
                        ByteIndex(
                            6,
                        ),
                    ),
                },
            ),
        ),
        rparen: ByteIndex(
            6,
        ),
    },
)
