zoc/src/syntax_tree/parser/tests/snapshots/zoc__syntax_tree__parser__tests__app__app_no_args.snap
---
source: zoc/src/syntax_tree/parser/tests/app.rs
expression: "&cst"
---
App(
    App {
        lparen: ByteIndex(
            0,
        ),
        callee: Deb(
            NumberLiteral {
                value: 0,
                span: (
                    ByteIndex(
                        1,
                    ),
                    ByteIndex(
                        2,
                    ),
                ),
            },
        ),
        args: Nil,
        rparen: ByteIndex(
            2,
        ),
    },
)
